Resolves: tdf#122803 make gallery 'add' dialog title localized

Change-Id: Iaa2ee6c982c8fd5d5cf1b9b09a835b917217d85c
Reviewed-on: https://gerrit.libreoffice.org/69516
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>